Fixed social icons spacing

--- a/css/main.css
+++ b/css/main.css
@@ -641,8 +641,12 @@ textarea {
     }
 
     footer p {
-        line-height: 1.285;
+      line-height: 1.285;
     }
+
+    footer .social-icons {
+      width: 12.5em;
+      justify-content: space-between;
 
     footer .copyright {
       width: 100%;
